--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,32 @@ footer {
   background-position: center;
 }
 
+.gallery-photo {
+  flex: 1 1 25%;
+  transition: ease-out 0.18s;
+}
+
+.gallery-photo:hover {
+  box-shadow: #d5dae3 -7px 7px;
+}
+
+/* 
+.gallery::after {
+  content: "";
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url("/cover-photo2.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -10;
+  filter: blur(4px) brightness(100%);
+} */
+
 section {
   margin-top: 0;
 }
