Done with the Journal Page. Up Next: Tagsss

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -154,6 +154,11 @@ footer {
   transition: all 1s ease-in-out;
 }
 
+.tags-container {
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+
 /* 
 .gallery::after {
   content: "";
